--- a/config/config.php.TEMPLATE
+++ b/config/config.php.TEMPLATE
@@ -10,7 +10,7 @@ return array(
 	"outputFolder" => "downloads",
 	"extracter" => "ffmpeg",
 	"log" => true,
-	"outfilename" => "%(title)s-%(id)s.%(ext)s",
+	"outfilename" => "%(title)s.%(ext)s",
 	"logFolder" => "logs",
 	"max_dl" => 3,
 	"session_lifetime" => 86400);
